add_executable( test_polynomial test_polynomial.cpp )
target_link_libraries( test_polynomial cs133hw3Lib )

add_executable( test_polynomial_function test_polynomial_function.cpp )
target_link_libraries( test_polynomial_function cs133hw3Lib )

add_executable( test_lambda_function test_lambda_function.cpp )
target_link_libraries( test_lambda_function cs133hw3Lib )

#Run unit tests
add_test(unittest_polynomial_01 test_polynomial ${PROJECT_SOURCE_DIR}/data/p01.txt)
add_test(unittest_polynomial_02 test_polynomial ${PROJECT_SOURCE_DIR}/data/p02.txt)
add_test(unittest_polynomial_03 test_polynomial ${PROJECT_SOURCE_DIR}/data/p03.txt)
add_test(unittest_polynomial_04 test_polynomial ${PROJECT_SOURCE_DIR}/data/p04.txt)
add_test(unittest_polynomial_05 test_polynomial ${PROJECT_SOURCE_DIR}/data/p05.txt)
add_test(unittest_polynomial_06 test_polynomial ${PROJECT_SOURCE_DIR}/data/p06.txt)
add_test(unittest_polynomial_07 test_polynomial ${PROJECT_SOURCE_DIR}/data/p07.txt)
add_test(unittest_polynomial_08 test_polynomial ${PROJECT_SOURCE_DIR}/data/p08.txt)
add_test(unittest_polynomial_09 test_polynomial ${PROJECT_SOURCE_DIR}/data/p09.txt)
add_test(unittest_polynomial_10 test_polynomial ${PROJECT_SOURCE_DIR}/data/p10.txt)

set_tests_properties(unittest_polynomial_01 PROPERTIES PASS_REGULAR_EXPRESSION "-2.92915")
set_tests_properties(unittest_polynomial_02 PROPERTIES PASS_REGULAR_EXPRESSION "-3.98942")
set_tests_properties(unittest_polynomial_03 PROPERTIES PASS_REGULAR_EXPRESSION "-1.15929")
set_tests_properties(unittest_polynomial_04 PROPERTIES PASS_REGULAR_EXPRESSION "4.68648")
set_tests_properties(unittest_polynomial_05 PROPERTIES PASS_REGULAR_EXPRESSION "0.0945188")
set_tests_properties(unittest_polynomial_06 PROPERTIES PASS_REGULAR_EXPRESSION "6.64804")
set_tests_properties(unittest_polynomial_07 PROPERTIES PASS_REGULAR_EXPRESSION "-4.17118")
set_tests_properties(unittest_polynomial_08 PROPERTIES PASS_REGULAR_EXPRESSION "-13.2622")
set_tests_properties(unittest_polynomial_09 PROPERTIES PASS_REGULAR_EXPRESSION "19.5477")
set_tests_properties(unittest_polynomial_10 PROPERTIES PASS_REGULAR_EXPRESSION "15.8907")

add_test(unittest_pol_func_01 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f01.txt)
add_test(unittest_pol_func_02 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f02.txt)
add_test(unittest_pol_func_03 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f03.txt)
add_test(unittest_pol_func_04 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f04.txt)
add_test(unittest_pol_func_05 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f05.txt)
add_test(unittest_pol_func_06 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f06.txt)
add_test(unittest_pol_func_07 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f07.txt)
add_test(unittest_pol_func_08 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f08.txt)
add_test(unittest_pol_func_09 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f09.txt)
add_test(unittest_pol_func_10 test_polynomial_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f10.txt)

set_tests_properties(unittest_pol_func_01 PROPERTIES PASS_REGULAR_EXPRESSION "-5.85829")
set_tests_properties(unittest_pol_func_02 PROPERTIES PASS_REGULAR_EXPRESSION "14.6147")
set_tests_properties(unittest_pol_func_03 PROPERTIES PASS_REGULAR_EXPRESSION "-49.3591")
set_tests_properties(unittest_pol_func_04 PROPERTIES PASS_REGULAR_EXPRESSION "-4.84928")
set_tests_properties(unittest_pol_func_05 PROPERTIES PASS_REGULAR_EXPRESSION "-94.9772")
set_tests_properties(unittest_pol_func_06 PROPERTIES PASS_REGULAR_EXPRESSION "-81539.2")
set_tests_properties(unittest_pol_func_07 PROPERTIES PASS_REGULAR_EXPRESSION "18.2024")
set_tests_properties(unittest_pol_func_08 PROPERTIES PASS_REGULAR_EXPRESSION "-22.4033")
set_tests_properties(unittest_pol_func_09 PROPERTIES PASS_REGULAR_EXPRESSION "-20.2943")
set_tests_properties(unittest_pol_func_10 PROPERTIES PASS_REGULAR_EXPRESSION "11.6111")

add_test(unittest_lambda_func_01 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f01.txt)
add_test(unittest_lambda_func_02 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f02.txt)
add_test(unittest_lambda_func_03 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f03.txt)
add_test(unittest_lambda_func_04 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f04.txt)
add_test(unittest_lambda_func_05 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f05.txt)
add_test(unittest_lambda_func_06 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f06.txt)
add_test(unittest_lambda_func_07 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f07.txt)
add_test(unittest_lambda_func_08 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f08.txt)
add_test(unittest_lambda_func_09 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f09.txt)
add_test(unittest_lambda_func_10 test_lambda_function ${PROJECT_SOURCE_DIR}/data/ ${PROJECT_SOURCE_DIR}/data/f10.txt)

set_tests_properties(unittest_lambda_func_01 PROPERTIES PASS_REGULAR_EXPRESSION "-5.85829")
set_tests_properties(unittest_lambda_func_02 PROPERTIES PASS_REGULAR_EXPRESSION "14.6147")
set_tests_properties(unittest_lambda_func_03 PROPERTIES PASS_REGULAR_EXPRESSION "-49.3591")
set_tests_properties(unittest_lambda_func_04 PROPERTIES PASS_REGULAR_EXPRESSION "-4.84928")
set_tests_properties(unittest_lambda_func_05 PROPERTIES PASS_REGULAR_EXPRESSION "-94.9772")
set_tests_properties(unittest_lambda_func_06 PROPERTIES PASS_REGULAR_EXPRESSION "-81539.2")
set_tests_properties(unittest_lambda_func_07 PROPERTIES PASS_REGULAR_EXPRESSION "18.2024")
set_tests_properties(unittest_lambda_func_08 PROPERTIES PASS_REGULAR_EXPRESSION "-22.4033")
set_tests_properties(unittest_lambda_func_09 PROPERTIES PASS_REGULAR_EXPRESSION "-20.2943")
set_tests_properties(unittest_lambda_func_10 PROPERTIES PASS_REGULAR_EXPRESSION "11.6111")